change banner text and red color

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   --font: "Roboto", sans-serif;
   --white: #fff;
   --link-color: rgba(31, 46, 53, 0.8);
-  --red: #ee4248;
+  --red: green;
   --title-color: #1f2e35;
   --subtitle-color: #30444e;
 }
